# input_event_codes.rs

./: Cargo.toml  README.md
.github/workflows/: ci.yml  update-event-codes.yml
generator/: Cargo.toml
generator/src/: category.rs  generate.rs  main.rs  parse.rs  renames.rs
input_event_codes_proc_macro/: Cargo.toml
input_event_codes_proc_macro/src/: lib.rs
src/: generated.rs  lib.rs
